# basic-todoapi-actix-sqlx

./: Cargo.toml  schema.sql
src/: db.rs  main.rs  models.rs  routes.rs
