[package]
name = "basic-todoapi-actix-sqlx"
version = "0.1.0"
authors = ["jawadcode <bandashing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.4", features = ["runtime-actix-native-tls", "postgres"] }
anyhow = "1"
pretty_env_logger = "0.4"